@@ -18,3 +18,11 @@ textinheading
 .. toctree::
 
    tocitem
+
+.. raw:: html
+
+   <span class="raw">rawword"</span>
+
+.. raw:: latex
+
+   latex_keyword
